quorum/test/tests/other/Pass/ConstantPrimitivesInConstructor.quorum
/*
Expected output:
1
2.0
3
false
*/

class Main
    on create
        constant text c = "3"
        constant boolean d = false
        constant number b = 1.0 + 1.0
        constant integer a = 1

        print a
        print b
        print c
        print d
    end

    action Main
    end
end