quorum/test/tests/other/Fail/ChangeConstantThroughInheritance.quorum
/*
Expected output: should not compile
*/

class Main is ClassWithConstants
    on create
        parent:ClassWithConstants:z = 2.121
        parent:ClassWithConstants:c = "don't do this"
    end

    action Main
        parent:ClassWithConstants:k = parent:ClassWithConstants:k + 1
    end
end